# rust_crypto_exchange_core

./: .gitignore  Cargo.toml  README.md  justfile
clients/: README.md
clients/android/: Cargo.toml
clients/android/app/: build.gradle
clients/android/app/src/main/java/com/cryptoexchange/trading/: TradingClient.kt
clients/desktop/: Cargo.toml
clients/desktop/src/: main.rs
clients/ios/: Cargo.toml
clients/ios/CryptoExchange/: Info.plist  TradingClient.swift
clients/python/: Cargo.toml  config.py  requirements.txt  trading_bot.py  trading_client.py
config/: README.md  default.toml  production.toml  test.toml
crates/accounts/: Cargo.toml
crates/accounts/src/: account.rs  balance.rs  lib.rs  wallet.rs
crates/api_gateway/: Cargo.toml
crates/api_gateway/src/: lib.rs  main.rs
crates/benchmarks/: Cargo.toml
crates/blockchain/: Cargo.toml
crates/blockchain/src/: adapter.rs  lib.rs  mock.rs
crates/common/: Cargo.toml
crates/common/src/: assets.rs  config.rs  error.rs  events.rs  lib.rs  order.rs  price.rs  testing.rs  trade.rs  types.rs
crates/custody/: Cargo.toml
crates/custody/src/: deposit.rs  lib.rs  withdrawal.rs
crates/events/: Cargo.toml
crates/events/src/: bus.rs  event.rs  handler.rs  lib.rs
crates/latency/: Cargo.toml
crates/latency/src/: lib.rs  metrics.rs
crates/matching_engine/: Cargo.toml
crates/matching_engine/src/: engine.rs  executor.rs  lib.rs  matcher.rs  processor.rs  types.rs
crates/matching_engine/src/benches/: matching_engine_bench.rs  mod.rs
crates/orderbook/: Cargo.toml
crates/orderbook/src/: book.rs  level.rs  lib.rs  limit.rs  market.rs  memory_pool.rs  price_levels.rs  side.rs
crates/orderbook/src/benches/: mod.rs  orderbook_bench.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: event_store.rs  lib.rs
crates/risk_engine/: Cargo.toml
crates/risk_engine/src/: checks.rs  engine.rs  lib.rs  limits.rs  validator.rs
crates/simulation/: Cargo.toml
crates/simulation/src/: main.rs
crates/transport/: Cargo.toml
examples/: config_example.rs
scripts/: README.md  presentation.bat  presentation.ps1  presentation.sh  start-server.ps1
