[workspace]
members = [
    "crates/common",
    "crates/orderbook", 
    "crates/matching_engine",
    "crates/risk_engine",
    "crates/accounts",
    "crates/blockchain",
    "crates/transport",
    "crates/api_gateway",
    "crates/persistence",
    "crates/benchmarks",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Crypto Exchange Team"]
license = "MIT"
homepage = "https://github.com/crypto-exchange/core"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Performance & Concurrency
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "6.1"
rayon = "1.10"

# Network & API
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = "0.24"
tonic = "0.12"
prost = "0.13"

# Database & Storage
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.26", features = ["tokio-comp"] }

# Metrics & Monitoring
prometheus = "0.13"
metrics = "0.24"
metrics-exporter-prometheus = "0.15"

# Serialization
bincode = "1.3"
bytes = "1.7"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
debug = true
