[workspace]
members = [
    "crates/common",
    "crates/orderbook", 
    "crates/matching_engine",
    "crates/api_gateway",
    "clients/desktop",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Crypto Exchange Team"]
license = "MIT"
homepage = "https://github.com/crypto-exchange/core"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Performance & Concurrency
dashmap = "6.1"

# Network & API
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Internal workspace crates
crypto-exchange-common = { path = "crates/common" }

# Metrics & Monitoring
prometheus = "0.13"
metrics = "0.24"
metrics-exporter-prometheus = "0.15"

# Serialization
bincode = "1.3"
bytes = "1.7"

# Cryptographic operations
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"

# CLI
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
tabled = "0.16"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 1
debug = true

[profile.dev.package."*"]
opt-level = 3

# Fast dev profile for quick iteration
[profile.fastdev]
inherits = "dev"
opt-level = 1
debug = false
incremental = true
codegen-units = 16

# Optimized dev profile
[profile.dev-optimized]
inherits = "dev"
opt-level = 2
debug = true
incremental = true
codegen-units = 8

# Main demo application
[package]
name = "crypto-exchange-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# External dependencies only
uuid.workspace = true
chrono.workspace = true
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
