[package]
name = "crypto-exchange-desktop-client"
version = "0.1.0"
edition = "2021"
authors = ["Crypto Exchange Team"]
license = "MIT"

[[bin]]
name = "desktop-client"
path = "src/main.rs"

[dependencies]
eframe = "0.27.2"
egui = "0.27.2"
egui_extras = "0.27.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = "0.24.0"
futures-util = { version = "0.3", features = ["sink", "std"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"], default-features = false }
uuid = { version = "1.0", features = ["v4", "serde"], default-features = false }
fastrand = "2.0"
crypto-exchange-common = { path = "../../crates/common" }

# Optimize dependencies for faster compilation
[patch.crates-io]
# Use pre-built versions where possible

# Development profile optimizations
[profile.dev]
opt-level = 1
debug = false
incremental = true
codegen-units = 16

[profile.dev.package."*"]
opt-level = 3

# Release profile optimizations
[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
