[package]
name = "crypto-exchange-api-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "demo-server"
path = "src/main.rs"

[dependencies]
crypto-exchange-common = { path = "../common" }
tokio.workspace = true
axum.workspace = true
tokio-tungstenite.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
futures-util = "0.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
dashmap = "6.1"

[dev-dependencies]
tokio-test = "0.4"
