[package]
name = "crypto-exchange-blockchain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
crypto-exchange-common = { path = "../common" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
bytes.workspace = true

[dev-dependencies]
tokio-test = "0.4"
proptest.workspace = true
