[package]
name = "crypto-exchange-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
bytes.workspace = true
bincode.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
