[package]
name = "crypto-exchange-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror = "1.0"
chrono.workspace = true
toml = "0.8"

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"
