[package]
name = "crypto-exchange-latency"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
hdrhistogram = "7.5"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
crossbeam = "0.8"
parking_lot = "0.12"
crypto-exchange-common = { path = "../common" }
crypto-exchange-events = { path = "../events" }
