[package]
name = "crypto-exchange-risk-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
crypto-exchange-common = { path = "../common" }
crypto-exchange-accounts = { path = "../accounts" }
parking_lot.workspace = true
dashmap.workspace = true
serde.workspace = true
uuid.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true

[dev-dependencies]
proptest.workspace = true
