[package]
name = "crypto-exchange-simulation"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simulation"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
hdrhistogram = "7.5"
clap = { version = "4.0", features = ["derive"] }
crypto-exchange-common = { path = "../common" }
crypto-exchange-events = { path = "../events" }
crypto-exchange-matching-engine = { path = "../matching_engine" }
crypto-exchange-blockchain = { path = "../blockchain" }
