[package]
name = "crypto-exchange-transport"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
crypto-exchange-common = { path = "../common" }
tokio.workspace = true
tokio-tungstenite.workspace = true
axum.workspace = true
tonic.workspace = true
prost.workspace = true
crossbeam.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
tracing.workspace = true
bytes.workspace = true
bincode.workspace = true

[dev-dependencies]
tokio-test = "0.4"
proptest.workspace = true
